--- a/MovieDB/appsettings.json
+++ b/MovieDB/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LL-THINKPAD\\SQLEXPRESS01;Database=MovieDB;Integrated Security=True;TrustServerCertificate=True;",
+    "MovieDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=MovieDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
