--- a/MovieDB/appsettings.json
+++ b/MovieDB/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=NOUGAT\\SQLEXPRESS;Database=MovieDb;Integrated Security=True; TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
