added the Review section on [Views] and [Controllers]

--- a/MovieDB/appsettings.json
+++ b/MovieDB/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MovieDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=MovieDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
