--- a/MovieDB.BLL/MovieDB.BLL.csproj
+++ b/MovieDB.BLL/MovieDB.BLL.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Build.Tasks.Git" Version="8.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MovieDB.DAL\MovieDB.DAL.csproj" />
     <ProjectReference Include="..\MovieDB.Models\MovieDB.Models.csproj" />
   </ItemGroup>
